class DatabaseConstants {
  static const String dbName = 'meu_banco.db';
  static const String tableNome = 'pessoas';
  static const String columnId = 'id';
  static const String columnNome = 'nome';
  static const String columnIdade = 'idade';
}
